--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,4 +49,5 @@ jobs:
       uses: golangci/golangci-lint-action@v3
       with:
         version: latest
+        args: --out-format=colored-line-number
 
